# fractaleidoscope

./: README.md  package.json
lib/: fractal.js  index.js
opengl/: CMakeLists.txt  Makefile  main.cpp
opengl/lib/: Shader.cpp  Shader.h
opengl/shaders/: bump.frag  bump.vert  minimal.frag  minimal.vert  phong.frag  phong.vert  scale.frag  scale.vert  texture.frag  texture.vert  twist.vert  vortex.frag  vortex.vert
tests/: index.html
